Added LSB first write long

--- a/doc_html/grammar.html
+++ b/doc_html/grammar.html
@@ -88,6 +88,8 @@ First states in the above list have a highest priority.
                 'WriteUInt' |      //Write 16 bit registers (unsigned)
                 'WriteLong' |      //Write 2*16 bit registers (signed)
                 'WriteULong' |     //Write 2*16 bit registers (unsigned)
+                'WriteLongLSB' |   //Write 2*16 bit registers (signed lsb first)
+                'WriteULongLSB' |  //Write 2*16 bit registers (unsigned lsb first)
                 'WriteFloat' |     //Write float value in 2 consecutive regs
                 'WriteDouble' |    //Write double value in 4 consecutive regs
                 'WriteCoil'        //Write single coil
