--- a/doc_html/grammar.html
+++ b/doc_html/grammar.html
@@ -104,7 +104,7 @@ First states in the above list have a highest priority.
                       &lt;integer&gt;,&lt;integer&gt; |            // For WriteBit
                       '{' &lt;integer&gt;,[&lt;integer&gt;]* '}'   // Integer list for WriteCoils
 
- &lt;type&gt;     ::= 'DevBoolean' | 'DevShort' | 'DevDouble' | 'DevLong' |            
+ &lt;type&gt;     ::= 'DevBoolean' | 'DevShort' | 'DevDouble' | 'DevLong' |  'DevFloat' |
                 'DevVarDoubleArray' | 'DevUShort' | 'DevULong'                                                
                                                                                
  &lt;double&gt;   ::= &lt;nb&gt;* '.' &lt;nb&gt; &lt;nb&gt;* ['E' [-] &lt;nb&gt; &lt;nb&gt;*] | &lt;integer&gt;          
