--- a/doc_html/grammar.html
+++ b/doc_html/grammar.html
@@ -14,6 +14,7 @@ Temp_Threshold=DevDouble(reg(0x3080)/10.0,WriteInt(0x3080,VALUE/10.0))
 CalcPower=DevDouble((4.18/60.0)*CoolingWaterFlow*(CavityWaterOutTemp-CavityWaterInTemp))
 Circumference=DevDouble(992/xattr('sy/ms/1/frequency')*299792458)
 Reset_All=DevShort( coil(3) | coil(4) | coil(5) , WriteCoils({3,4,5},VALUE))
+SwapBits=DevShort(coil(0),WriteCoils({0,1},{VALUE,not VALUE}))
 
 <b>Exemple of dynamic command expression:</b>
 
@@ -34,7 +35,7 @@ First states in the above list have a highest priority.
 <b>Grammar</b>
 
  &lt;attdef&gt; ::= &lt;name&gt; '=' &lt;type&gt;'(' &lt;expr&gt; [, &lt;writefn&gt;'('&lt;writefn_params&gt;,&lt;expr&gt;')']')' |
-              <name> '= DevString(' &lt;integer&gt;,&lt;integer&gt; ')'
+              &lt;name&gt; '= DevString(' &lt;integer&gt;,&lt;integer&gt; ')'
  &lt;statedef&gt; ::= &lt;name&gt; '=' &lt;expr&gt; [, &lt;status_string&gt;]                          
                                                                                
  &lt;expr&gt;   ::= &lt;factor1&gt; [ &lt;oper1&gt; &lt;factor1&gt; ]                                  
@@ -44,8 +45,8 @@ First states in the above list have a highest priority.
  &lt;factor4&gt;::= &lt;term&gt; [ &lt;oper5&gt; &lt;term&gt; ]*                                       
                                                                                
  &lt;term&gt;   ::= '(' &lt;exp&gt; ')'      |                                             
-                &lt;double&gt;         |                                             
-                &lt;name&gt;           |                                             
+                &lt;double&gt;         |
+                &lt;name&gt;           |
                '-' &lt;term&gt;        |                                             
                '~' &lt;term&gt;        |                                             
                'not ' &lt;term&gt;     |                                             
@@ -66,14 +67,15 @@ First states in the above list have a highest priority.
                'sqrt(' &lt;exp&gt; ')' |                                             
                'fact(' &lt;exp&gt; ')'  |                                            
                'pow(' &lt;exp&gt;,&lt;exp&gt; ')'  |                                       
-               'mod(' &lt;exp&gt;,&lt;exp&gt; ')'  |
-               'sum(' <string>,<integer>,<integer> ')' |   // Sum of variable from name(i1) to name(i2)
+               '{' &lt;exp&gt;,[&lt;exp&gt;]* '}' |                    // Vector definition
+               'mod(' &lt;exp&gt;,&lt;exp&gt; ')'  |                         // Modulo
+               'sum(' &lt;string&gt;,&lt;integer&gt;,&lt;integer&gt; ')' |   // Sum of variable from name(i1) to name(i2)
 
                                                       //Scalar reading:          
                'reg(' &lt;integer&gt; ')' |                 //Read 16 bit signed       
                'ureg(' &lt;integer&gt; ')' |                //Read 16 bit unsigned     
                'freg(' &lt;integer&gt; ')' |                //Read 2*16bit float LE
-               'fregsbe(' <integer>,<integer> ')' |   Read n*2*16bit float BE
+               'fregsbe(' &lt;integer&gt;,&lt;integer&gt; ')' |   Read n*2*16bit float BE
                'dreg(' &lt;integer&gt; ')' |                //Read 4*16bit double LE
                'dregbe(' &lt;integer&gt; ')' |                //Read 4*16bit double BE
                'coil(' &lt;integer&gt; ')' |                //Read single coil
@@ -105,7 +107,7 @@ First states in the above list have a highest priority.
                 'WriteFloat' |     //Write float value in 2 consecutive regs
                 'WriteDouble' |    //Write double value in 4 consecutive regs
                 'WriteCoil' |      //Write single coil
-                'WriteCoils'       //Write mulitple coils params={coillist}
+                'WriteCoils'       //Write multiple coils params={coillist}
 
  &lt;writefn_params&gt; ::= &lt;integer&gt; |
                       &lt;integer&gt;,&lt;integer&gt; |            // For WriteBit
